Fix tab div not extending on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,8 @@ header > p {
 
 #controls > div {
 	min-height: 100%;
+	height: max-content;
+	overflow-y: auto;
 }
 
 #assign {
